// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<span
  className="wrapper"
  onChange={undefined}
>
  <span
    className="baseline"
  >
    <div
      className="shape"
    >
      <input
        checked={undefined}
        className="native"
        defaultChecked={undefined}
        disabled={undefined}
        id="_teatime1"
        name="control"
        onBlur={undefined}
        onChange={[Function]}
        onFocus={undefined}
        type="checkbox"
        value={undefined}
      />
      <label
        className="control"
        htmlFor="_teatime1"
      >
        <span
          className="label"
        >
          On
        </span>
        <span
          className="label"
        >
          Off
        </span>
        <span
          className="delimiter"
        >
           
        </span>
      </label>
    </div>
  </span>
</span>
`;

exports[`Renders correctly with defined props 1`] = `
<span
  className="wrapper outer"
  onChange={undefined}
>
  <span
    className="baseline"
  >
    <div
      className="shape"
    >
      <input
        checked={true}
        className="native"
        defaultChecked={undefined}
        disabled={true}
        id="controls-id"
        name="control"
        onBlur={undefined}
        onChange={[Function]}
        onFocus={undefined}
        type="checkbox"
        value={undefined}
      />
      <label
        className="control"
        htmlFor="controls-id"
      >
        <span
          className="label"
        >
          ~~ON~~
        </span>
        <span
          className="label"
        >
          ~~OFF~~
        </span>
        <span
          className="delimiter"
        >
           
        </span>
      </label>
    </div>
  </span>
</span>
`;
